section_posts.html: changed

--- a/_includes/section_posts.html
+++ b/_includes/section_posts.html
@@ -10,7 +10,7 @@
       {% assign slice_length = section.posts_number | minus: 0 %}
       {% assign recent_posts = display_posts | slice: 0, slice_length %}
       {% for post in recent_posts %}
-      <article class="post post-card">
+      <article class="post-card">
         <div class="post-inside">
           {% assign thumb_img_path_is_not_empty = post.thumb_img_path | is_not_empty %}
           {% if thumb_img_path_is_not_empty %}
