--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -14,7 +14,7 @@ layout: body
     </header>
     {% assign img_path_is_not_empty = page.img_path | is_not_empty %}
     {% if img_path_is_not_empty %}
-    <div class="post-image" max-height: 50%>
+    <div class="post-image" max-height: 50% max-width: 50%>
       <img src="{{ page.img_path | relative_url }}" alt="{{ page.img_alt }}" />
     </div>
     {% endif %}
