page.html: changed

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -17,7 +17,7 @@ layout: body
     <div class="post-image">
       <img src="{{ page.img_path | relative_url }}" alt="{{ page.img_alt }}" />
       img{ max-height= 50%;
-           max-width= 50}
+           max-width= 50%}
     </div>
     {% endif %}
     <div class="post-content inner-sm">
