--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -15,7 +15,7 @@ layout: body
     {% assign img_path_is_not_empty = page.img_path | is_not_empty %}
     {% if img_path_is_not_empty %}
     <div class="post-image">
-      <img src="{{ page.img_path | relative_url }}" alt="{{ page.img_alt }}" img max-width= 50% max-height= 50% />
+      <img src="{{ page.img_path | relative_url }}" alt="{{ page.img_alt }}" max-width= 50% max-height= 50% />
     </div>
     {% endif %}
     <div class="post-content inner-sm">
